# QLSV

./: CMakeLists.txt  QLDSV_TC.cpp  QLDSV_TC.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
